--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,52 @@
+appnope==0.1.3
+asttokens==2.1.0
+backcall==0.2.0
+bcrypt==4.0.1
+capstone==5.0.0rc2
+certifi==2022.9.24
 cffi==1.15.1
+charset-normalizer==2.1.1
+colored-traceback==0.3.0
+cryptography==38.0.3
+decorator==5.1.1
+executing==1.2.0
+idna==3.4
+intervaltree==3.1.0
+ipdb==0.13.9
+ipython==8.6.0
+jedi==0.18.1
+Mako==1.2.4
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+packaging==21.3
+paramiko==2.12.0
+parso==0.8.3
+pathlib2==2.3.7.post1
+pexpect==4.8.0
+pickleshare==0.7.5
+plumbum==1.8.0
+prompt-toolkit==3.0.32
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pwn==1.0
+pwntools==4.8.0
 pycparser==2.21
+pyelftools==0.29
+Pygments==2.13.0
 PyNaCl==1.5.0
+pyparsing==3.0.9
+pyserial==3.5
+PySocks==1.7.1
+python-dateutil==2.8.2
+requests==2.28.1
+ROPGadget==7.1
+rpyc==5.2.3
+six==1.16.0
+sortedcontainers==2.4.0
+stack-data==0.6.1
+toml==0.10.2
+traitlets==5.5.0
+unicorn==2.0.1.post1
+urllib3==1.26.13
+wcwidth==0.2.5
